--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Archive Detect diagnostics
         uses: actions/upload-artifact@v2
         with:
-          name: code-coverage-report
+          name: detect-diagnostics
           path: /Users/runner/blackduck/runs
