--- a/.github/workflows/blackduck-action.yml
+++ b/.github/workflows/blackduck-action.yml
@@ -23,7 +23,7 @@ jobs:
           DETECT_DETECTOR_SEARCH_DEPTH: 5
         with:
           scan-mode: INTELLIGENT
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           detect-version: latest
           blackduck-url: ${{ secrets.BLACKDUCK_URL }}
           blackduck-api-token: ${{ secrets.BLACKDUCK_API_TOKEN }}
