--- a/.github/workflows/blackduck-action.yml
+++ b/.github/workflows/blackduck-action.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           scan-mode: INTELLIGENT
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          #detect-version: latest
+          detect-version: 7.11.0
           blackduck-url: ${{ secrets.BLACKDUCK_URL }}
           blackduck-api-token: ${{ secrets.BLACKDUCK_API_TOKEN }}
